<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:visibility="visible" >

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:gravity="center"
                    android:text="@string/global_positioning_system"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/tvGPSQuestion"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/textView6"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="23sp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp" >

                    <TextView
                        android:id="@+id/tvLatitude"
                        android:layout_width="200dp"
                        android:layout_height="fill_parent"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:gravity="center"
                        android:text="laitude"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:text="@string/latitude_"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp" >

                    <TextView
                        android:id="@+id/tvLongitude"
                        android:layout_width="200dp"
                        android:layout_height="fill_parent"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:gravity="center"
                        android:text="longitude"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:text="@string/longitude_"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:text="@string/altitud_"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/tvAltitud"
                        android:layout_width="200dp"
                        android:layout_height="fill_parent"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:gravity="center"
                        android:text="altitud"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="15sp" />

                </RelativeLayout>
                
                <RelativeLayout
                    android:id="@+id/rlAccuracy"
                    android:layout_width="match_parent"
                    android:layout_height="60dp" >

                    <TextView
                        android:id="@+id/tvAccuracy"
                        android:layout_width="200dp"
                        android:layout_height="fill_parent"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:gravity="center"
                        android:text="accuracy"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/tvAccuracy"
                        android:layout_alignBottom="@+id/tvAccuracy"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="15dp"
                        android:text="@string/accuracy_"
                        android:textAppearance="?android:attr/textAppearanceLarge" />
                </RelativeLayout>
                
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp" >

                    <TextView
                        android:id="@+id/tvNMEAString"
                        android:layout_width="200dp"
                        android:layout_height="fill_parent"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:gravity="center"
                        android:text="nmea"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:text="@string/nmea"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                </RelativeLayout>

                <Button
                    android:id="@+id/btnGetPosition"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/get_position" />

</LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>