<LinearLayout android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >      

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvPageInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/tvSubjectNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/tvPageNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="right"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </LinearLayout>

            <ScrollView
                android:id="@+id/svQuestionScroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <Button
                            android:id="@+id/btnHelp"
                            style="?android:attr/buttonStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/helpText" />

                        <LinearLayout
                            android:id="@+id/llQuestionsLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="35dp"
                            android:orientation="vertical" >
                            	
                        </LinearLayout>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <Button
                            android:id="@+id/btnBack"
                            android:layout_width="80dp"
                            android:layout_height="40dp"
                            android:layout_gravity="right"
                            android:text="@string/backbutton"
                            android:textSize="15sp" />

                        <Button
                            android:id="@+id/btnNext"
                            android:layout_width="80dp"
                            android:layout_height="40dp"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentTop="true"
                            android:text="@string/nextbutton"
                            android:textSize="15sp" />
                    </RelativeLayout>

                </LinearLayout>
            </ScrollView>

        </LinearLayout>

</LinearLayout>